feat: add user management and owner dashboard with comprehensive analytics
User Management:
- Create UserController with upgrade-to-owner endpoint
- Implement UserService and UserServiceImpl
- Add UpgradeResponseDto for role upgrade responses
- Update UserResponseDto to include userStatus field
- Fix UserMapper to properly map userStatus from User entity
- Add validation to prevent duplicate OWNER role assignment

Owner Dashboard:
- Create OwnerDashboardController with 6 REST endpoints
- Implement OwnerDashboardService interface
- Add OwnerDashboardServiceImpl with complete business logic
- Update all dashboard DTOs (Stats, Performance, Revenue, Booking History)
- Calculate advanced metrics: occupancy rate, average revenue, unique customers
- Add date range filtering for revenue analytics
- Generate daily revenue breakdown for charting
- Sort stations by revenue in descending order

Security:
- Add RestAuthenticationEntryPoint for proper error handling
- Update SecurityConfig for dashboard endpoints
- Implement @PreAuthorize for OWNER/ADMIN only access
- Fix JwtAuthenticationFilter for better token validation
- Update AuthController with proper error responses

Endpoints added:
- POST /api/users/upgrade-to-owner
- GET /api/owner/dashboard/stats
- GET /api/owner/dashboard/stations/performance
- GET /api/owner/dashboard/stations/top?limit=N
- GET /api/owner/dashboard/revenue/analytics?startDate&endDate
- GET /api/owner/dashboard/stations/{id}/performance
- GET /api/owner/dashboard/stations/{id}/bookings